# metasift

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PORT_ERRATA.md  README.md  SUBMISSION.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  config.py  deps.py  errors.py  main.py  schemas.py  store.py
app/api/migrations/: 001_initial.sql  002_runtime_config.sql  003_session_id.sql
app/api/routers/: analysis.py  chat.py  dq.py  health.py  llm.py  om.py  report.py  review.py  scans.py  viz.py
app/clients/: duck.py  llm.py  openmetadata.py
app/engines/: __init__.py  agent.py  analysis.py  cleaning.py  report.py  stewardship.py  tools.py  viz.py
deploy/sandbox/: .env.sandbox  Caddyfile  README.md  docker-compose.sandbox.yml  logrotate-caddy  sudoers.d-metasift
deploy/sandbox/systemd/: metasift-api.service  metasift-om.service  metasift-reset.service  metasift-reset.timer
scripts/: dq_fixtures.json  port_parity.py  routing_sweep.py  sandbox_rotate_om_token.py  seed_messy_catalog.py  stress_tools.py
tests/: test_smoke.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: AppLayout.tsx  ByoKeyModal.tsx  ChatMarkdown.tsx  Composer.tsx  CopyableFQN.tsx  DQVizTable.tsx  EditableTitle.tsx  EmptyState.tsx  LogoM.tsx  MessageList.tsx  MetricCard.tsx  MetricMini.tsx  ModelQuickPicker.tsx  NavIcon.tsx  PageHeader.tsx  PlotTab.tsx  ReportMarkdown.tsx  ReviewCard.tsx  SandboxBanner.tsx  ScanButton.tsx  ScanPanel.tsx  ScoreRing.tsx  Sidebar.tsx  Skeleton.tsx  StewHome.tsx  ToolTrace.tsx  ToolsPalette.tsx  TopBar.tsx  WelcomeModal.tsx
web/src/lib/: api.ts  sandbox.ts  tools.ts
web/src/screens/: DQ.tsx  Dashboard.tsx  DataSources.tsx  Report.tsx  Review.tsx  Settings.tsx  Stew.tsx  StewConversation.tsx  Viz.tsx
web/src/styles/: index.css
